--- a/bbs.AppTemplate/bbs.AppTemplate.Android/bbs.AppTemplate.Android.csproj
+++ b/bbs.AppTemplate/bbs.AppTemplate.Android/bbs.AppTemplate.Android.csproj
@@ -65,7 +65,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbContext_helper.cs" />
-    <Compile Include="Localize.cs" />
+    <Compile Include="Localize_helper.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
