--- a/bbs.AppTemplate.Resources/bbs.AppTemplate.Resources.csproj
+++ b/bbs.AppTemplate.Resources/bbs.AppTemplate.Resources.csproj
@@ -5,7 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Langs\" />
+    <Compile Update="Langs\GlobalResx.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>GlobalResx.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Langs\GlobalResx.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>GlobalResx.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>bbs.AppTemplate.Resources.Langs</CustomToolNamespace>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
