--- a/bbs.AppTemplate/bbs.AppTemplate.Android/bbs.AppTemplate.Android.csproj
+++ b/bbs.AppTemplate/bbs.AppTemplate.Android/bbs.AppTemplate.Android.csproj
@@ -67,6 +67,7 @@
     <Compile Include="DbContext_helper.cs" />
     <Compile Include="Localize_helper.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Orientation_helper.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
